1999-11-23  Jonathan Blandford  <jrb@redhat.com>

	* Removed #PRAGMA } from headers.  Also, make compile if you don't
	have it installed, already.

1999-11-22  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in (GDK_PIXBUF_DIR): Fix for srcdir != builddir.

1999-11-22  Havoc Pennington  <hp@pobox.com>

	* src/Makefile.am (GDK_PIXBUF_LIBS): Patch from Paul Fisher
	<pnfisher@redhat.com> adds all -lgdk-pixbuf and all other
	dependencies to LIBADD variables for loadable modules. Necessary
	for a Java dynamic loading thing to be able to figure it out.

1999-11-22  Havoc Pennington  <hp@pobox.com>

	* src/io-png.c (image_load_increment): Call the update_area
	callback depending on the number of rows loaded in this increment.

	* src/testpixbuf.c (main): slow down the progressive load demo

1999-11-16  Havoc Pennington  <hp@pobox.com>

	* src/gdk-pixbuf-drawable.h: Get the quotes right on the #include

1999-11-22  Jonathan Blandford  <jrb@redhat.com>

	* configure.in (GDK_PIXBUF_DIR): make the symlink.  Does not work
	for srcdir != buildir != .  Beats me why; I can't figure it out.
	AC_OUTPUT_COMMANDS doesn't seem to let me substitute it correctly.

1999-11-21  Jonathan Blandford  <jrb@redhat.com>

	* src/gdk-pixbuf-io.c: added io-bmp from Arjan
	<arjan@fenrus.demon.nl>

1999-11-20  Michael Zucchi  <zucchi@zedzone.mmc.com.au>

	* src/gdk-pixbuf-drawable.c (gdk_pixbuf_from_drawable_core):
	Rework/reorder of the code.  Each case has been separated into
	another function; its big but it should be quick.
	gdk_pixbuf_rgba_from_drawable() will now return a pixbuf with
	opaque alpha information.  Not all depths/formats have been
	tested, but 8, 15/16 and 24 (alinged 32) should work ok.

1999-11-17  Larry Ewing  <lewing@gimp.org>

	* src/gnome-canvas-pixbuf.c (gnome_canvas_pixbuf_bounds):
	implement the bounds method correctly.
	(compute_viewport_affine): compute the affine need to fit the 
	image within the viewport given by the args.